--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <h1>Primeira paginawed!</h1>
+        <h1>Primeira Página Web!</h1>
     </header>
     
     <main>
@@ -27,6 +27,12 @@
                 <li>React e New.js</li>
             </ul>
             <p>Iremos criar soluções criativas!</p>
+            <nav>
+                <ul>
+                    <li><a href="Lab 1/index.html"> </a></li>
+                    <li><a href="Lab 2/index.html"> </a> </li>
+                </ul>
+            </nav>
             <img src="images/diw.svg" alt="Desenvolvimento de Interfaces Web">
     </main>
     <footer>
