--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>MarwanGhunim</title>
+    <style>
+        img{
+            width: 300px;
+        }
+    </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -15,7 +21,7 @@
             Eis a minha primeira pagina Web!</p>
             <p>
                 Na Unidade Curricular de
-                <a> href = "https://moodle.ensinolusofona.pt/course/view.php?id=11232">
+                <a href = "https://moodle.ensinolusofona.pt/course/view.php?id=11232" target = "_blank">
                     Desenvolvimento de Interfaces Web
                 </a>
                 abordaremos as seguintes tecnologias Web &#127760;:
@@ -27,10 +33,11 @@
                 <li>React e New.js</li>
             </ul>
             <p>Iremos criar soluções criativas!</p>
+            
             <nav>
                 <ul>
-                    <li><a href="Lab 1/index.html"> </a></li>
-                    <li><a href="Lab 2/index.html"> </a> </li>
+                    <li><a href="Lab 1/index.html"> Lab 1</a></li>
+                    <li><a href="Lab 2/index.html"> Lab 2</a></li>
                 </ul>
             </nav>
             <img src="images/diw.svg" alt="Desenvolvimento de Interfaces Web">
