--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -12,7 +12,7 @@
             <h2>Home</h2>
             <p>A minha cidade é muito linda!!!</p>
             <nav>
-                <a href="index.html">home</a>
+                <a href="index.html">Home</a>
                 <a href="info.html">Informação</a>
                 <a href="local.html">Localização</a>
                 <a href="multimedia.html">Multimédia</a>
