--- a/Lab 2/info.html
+++ b/Lab 2/info.html
@@ -49,9 +49,9 @@
     <main>
         <nav>
             <a href="index.html">Home</a>
-            <a href="info.html">Informação</a>
             <a href="local.html">Localização</a>
-            <a href="multimedia.html">Multimédia</a>
+            <a href="multimedia.html">Multimedia</a>
+            <a href="info.html">Informação</a>
         </nav>
         <h2>Informações</h2>
         <p>A tabela abaixo apresenta informações essenciais sobre Nápoles.</p>
