--- a/Lab 2/local.html
+++ b/Lab 2/local.html
@@ -14,9 +14,9 @@
     <main>
         <nav>
             <a href="index.html">Home</a>
-            <a href="info.html">Informação</a>
             <a href="local.html">Localização</a>
-            <a href="multimedia.html">Multimédia</a>
+            <a href="multimedia.html">Multimedia</a>
+            <a href="info.html">Informação</a>
         </nav>
         <img src="images/naples 1.jpeg" alt="Naples" width="500" height="300">
         <h2>Localização</h2>
