--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -14,9 +14,9 @@
             <p>A minha cidade é muito linda!!!</p>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="info.html">Informação</a>
                 <a href="local.html">Localização</a>
-                <a href="multimedia.html">Multimédia</a>
+                <a href="multimedia.html">Multimedia</a>
+                <a href="info.html">Informação</a>
         </nav>
         </main>
         
