--- a/Lab 3/info.html
+++ b/Lab 3/info.html
@@ -23,7 +23,7 @@
 
         th {
             background-color: #003566;
-            color: #d294dd;
+            color: #ffffff;
             /* vermelho para cabeçalhos */
         }
 
