--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
 
       <div class="hero-content">
-        <h2>Transforme Ideias em Realidade 🌟</h2>
+        <h2>Acompanha-me</h2>
         <p>Crie, aprenda e inove com Desenvolvimento Web!</p>
         <a href="#projetos" class="cta-btn">Ver Projetos</a>
       </div>
