--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
 
     <div class="card">
       <h3>Lab 3</h3>
-      <p>Interatividade com JS</p>
+      <p>Grids</p>
       <a href="Lab 3/index.html" target="_blank">Ver Projeto</a>
     </div>
+    <div class="card">
+      <h3>Lab 4</h3>
+      <p>JavaScript Inicial</p>
+      <a href="Lab 4/index.html" target="_blank">Ver Projeto</a>
   </div>
 </section>
 
