--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <p>Explora os botões. Cada interação conta!</p>
+    <p>Experimenta todos!!</p>
 
     <div>
       <button onclick="incrementar()">Clique aqui</button>
