--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
       <p>JavaScript Inicial</p>
       <a href="Lab 4/index.html" target="_blank">Ver Projeto</a>
   </div>
+  </div class="cards-container">
+    <h3>Lab 5</h3>
+    <p>JavaScript Simples.</p>
+    <a href="Lab 5/index.html" target="_blank">Ver Projeto</a>
+  </div>
 </section>
 
     <!-- 📘 SECÇÃO DISCIPLINA -->
