lab 6 mega beta version

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <p>JavaScript Simples.</p>
     <a href="Lab 5/index.html" target="_blank">Ver Projeto</a>
   </div>
+  <div class="card">
+    <h3>Lab 6</h3>
+    <p>Loja Simples</p>
+    <a href="Lab 6/index.html" target="_blank">Ver Projeto</a>
 </section>
 
     <!-- 📘 SECÇÃO DISCIPLINA -->
