--- a/index.html
+++ b/index.html
@@ -53,20 +53,30 @@
       <p>Grids</p>
       <a href="Lab 3/index.html" target="_blank">Ver Projeto</a>
     </div>
+
     <div class="card">
       <h3>Lab 4</h3>
       <p>JavaScript Inicial</p>
       <a href="Lab 4/index.html" target="_blank">Ver Projeto</a>
-  </div>
-  </div class="card">
+    </div>
+
+  <div class="card">
     <h3>Lab 5</h3>
     <p>JavaScript Simples.</p>
     <a href="Lab 5/index.html" target="_blank">Ver Projeto</a>
   </div>
+
   <div class="card">
     <h3>Lab 6</h3>
     <p>Loja Simples</p>
     <a href="Lab 6/index.html" target="_blank">Ver Projeto</a>
+  </div>
+
+  <div class="card">
+    <h3>Lab 7</h3>
+    <p>Loja Complicado</p>
+    <a href="Lab 7/index.html" target="_blank">Ver Projeto</a>
+  </div>
 </section>
 
     <!-- 📘 SECÇÃO DISCIPLINA -->
