--- a/Lab 6/index.html
+++ b/Lab 6/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loja</title>
 </head>
+
 <body>
     <header>
-    <h1>Loja</h1>
-    <nav>
-      <ul>
-        <li><a href="#produtos">Produtos</a></li>
-        <li><a href="#cesto">Cesto</a></li>
-      </ul>
-  </header>
+        <h1>Loja</h1>
+        <nav>
+            <ul>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#cesto">Cesto</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section id="produtos"> 
-    </section>
-    <section id="cesto"> 
-    </section>
-</main>
+    <main>
+        <section id="produtos">
+        </section>
+        <section id="cesto">
 
-<footer></footer>
-
+        </section>
+    </main>
+    <footer>
+        <p>DIW 2025</p>
+    </footer>
+    
+    <script src="Scripts/produtos.js"></script>
+    <script src="Scripts/Main.js"></script>
 </body>
-</html>
